<resources>
    <string name="app_name">2DelCassarApp</string>
    <string name="user_name_email">Nombre de usuario o correo</string>
    <string name="input_name_email">Ingrese su nombre o correo electrónico:</string>
    <string name="login">Ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="hola_hola">Hola sapo Hp</string>
    <string name="input_password">Ingrese su contraseña:</string>
    <string name="password">Contraseña</string>
    <string name="required_field">Campo requerido</string>
    <string name="register"><u></u>Registrarse</string>
    <string name="register_title">Formulario de Registro</string>
    <string name="input_user_name">Ingrese su nombre de usuario:</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="input_email">Ingrese su correo electrónico:</string>
    <string name="email">Correo electrónico</string>
    <string name="register_button">Registrarse</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="title_login">Ingresar a Del Cassar App</string>
    <string name="input_user_name_error">Ingrese un nombre de usuario</string>
    <string name="input_email_error">Ingrese un correo electónico</string>
    <string name="input_pasword_error">Ingrese una contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="password_not_equal">Las contraseñas no coinciden</string>
    <string name="input_user_email_error">Ingrese un usuario o correo</string>
    <string name="user_email_error">El usuario o correo no existe</string>
    <string name="user_nonexistent">El usuario no existe</string>
    <string name="name_image">Nombre principal de la imagen</string>
    <string name="digit_min">Mínimo 6 dígitos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_purchase">Compras</string>
    <string name="title_cart">Carrito</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Perfil</string>
    <string name="purchase_description">En este fragment se encontrarán los productos que el usuario tiene disponibles para la compra.</string>
    <string name="cart_description">En este fragment se encontrán los productos que el usuario selecionó para la compra</string>
    <string name="chat_description">Este fragment será el medio de  comunicación entre el usuario y el vendedor, aquí se pude acordar el metodo de pago y el tipo de entrega de los productos.</string>
    <string name="profile_description">En este fragmento se encontraran todos los datos del usuario y una sección donde se califica al usuario según el numero de compras y deudas pendientes.</string>
    <string name="input_address">Ingrese su dirección:</string>
    <string name="address">Dirección</string>
    <string name="input_telephone">Ingrese su número de teléfono:</string>
    <string name="telephone">Número de teléfono</string>
    <string name="input_phone">Ingrese su número de celular:</string>
    <string name="phone">Número de celular</string>
    <string name="rice_example">Arroz roa</string>
    <string name="button_add_cart">add</string>
    <string name="amount_example">Cantidad:</string>
    <string name="cost_example">Precio: 4500$</string>
    <string name="description_example">Descripción: 3KG - Roa el señor arroz de las señoras</string>
    <string name="title_list_purchase">Lista de productos</string>
    <string name="profile_title">Perfil de usuario</string>
    <string name="search">Buscar</string>
    <string name="score_1">Puntaje del cliente</string>
    <string name="score_2">Puntaje del cliente: %s</string>
    <string name="update">Actualizar</string>
    <string name="amount_products"># de productos</string>
    <string name="button_delete_cart">Quitar</string>
    <string name="title_cart_frag">Productos seleccionados</string>
    <string name="message_example">Mensaje del chat Ejemplo</string>
    <string name="write_message">Escribe un mensaje...</string>
    <string name="profile_item_example">Nombre</string>
    <string name="profile_name_example">Javier Andres Mosquera</string>
    <string name="total">Total: 0$</string>
    <string name="user_name_example">Javier Andres Mosquera</string>
    <string name="score_example">10.000</string>
    <string name="buy">Comprar:</string>
    <string name="accept">Comprar</string>
    <string name="cancel">Revisar</string>
    <string name="update_data">Actualizar Datos</string>
</resources>