<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_purchase">

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.eljeff.appfinalproject.PurchaseFragment"
        android:label="@string/title_purchase"
        tools:layout="@layout/fragment_purchase" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.eljeff.appfinalproject.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.eljeff.appfinalproject.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.eljeff.appfinalproject.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>