<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="8dp"
        tools:context=".ui.profile.ProfileFragment">

        <TextView
            android:id="@+id/title_pro_tx_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textColor="@color/buttons_color"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/score_color"
            android:text="@string/score_1"
            android:textColor="@color/background"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_pro_tx_vw" />

        <TextView
            android:id="@+id/user_name_pro_tx_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/input_user_name"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_score" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_pro_tx_inp_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_pro_tx_vw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_pro_ed_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_layouts"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_pro_tx_vw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_email"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_pro_tx_inp_lay" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_pro_tx_inp_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_pro_tx_vw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_pro_ed_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_layouts"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/address_pro_tx_vw_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_address"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_pro_tx_inp_lay" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_pro_tx_inp_lay_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_pro_tx_vw_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_pro_ed_tx_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_layouts"
                android:hint="@string/address" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/telephone_pro_tx_vw_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_telephone"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_pro_tx_inp_lay_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telephone_pro_tx_inp_lay_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone_pro_tx_vw_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telephone_pro_ed_tx_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_layouts"
                android:hint="@string/telephone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phone_pro_tx_vw_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/input_phone"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone_pro_tx_inp_lay_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_pro_tx_inp_lay_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_pro_tx_vw_2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_pro_ed_tx_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_layouts"
                android:hint="@string/phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profile_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/buttons_color"
            android:text="@string/search"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_pro_tx_inp_lay_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>